--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,30 @@
-<router-outlet></router-outlet>
+<section class="container">
+  <section class="display-text">
+    <h1>Bem vindo(a)!</h1>
+    <p>Por favor, preencha os campos abaixo para logar.</p>
+  </section>
+  <section class="input-section">
+    <mat-form-field class="email-input">
+      <mat-label>E-mail</mat-label>
+      <input type="email" matInput placeholder="Ex. nome@gmail.com" />
+    </mat-form-field>
+
+    <mat-form-field class="password-input">
+      <mat-label>Senha</mat-label>
+      <input matInput [type]="hide ? 'password' : 'text'" />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="hide = !hide"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide"
+      >
+        <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+      </button>
+    </mat-form-field>
+  </section>
+  <section class="login-section">
+    <mat-checkbox class="example-margin">Lembrar de mim</mat-checkbox>
+    <p>Esqueceu a senha?</p>
+  </section>
+</section>
