--- a/src/app/theme/styles/global-styles.scss
+++ b/src/app/theme/styles/global-styles.scss
@@ -1,4 +1,4 @@
-@import "colors";
+@import "./colors.scss";
 
 html,
 body {
@@ -7,5 +7,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: black;
+  background: url(../../../assets/images/background1.png) no-repeat center
+    center fixed;
+  color: $primary-color;
 }
