Implementado tentarLogin no componente e serviço

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+<input [(ngModel)]="requestLogin.username" type="text" placeholder="E-mail">
+<input [(ngModel)]="requestLogin.password" type="text" placeholder="Senha">
+<button (click)="tentarLogin()">Entrar</button>
+<p *ngIf="mostrarErro">{{ mensagemErro }}</p>
