--- a/src/app/theme/styles/colors.scss
+++ b/src/app/theme/styles/colors.scss
@@ -1,4 +1,29 @@
-// colors.scss
+// Primária
+$primary-100: #eadcd4;
+$primary-300: #d1b3a1;
+$primary-500: #ba8e73;
+$primary-700: #846552;
+$primary-900: #4e3c30;
 
-$primary-color: #fff;
-$secondary-color: #ba8e73;
+// Secundária
+$secondary-100: #f6d9d9;
+$secondary-300: #ecaeae;
+$secondary-500: #e38686;
+$secondary-700: #a15f5f;
+$secondary-900: #5f3838;
+
+/* Cores de apoio */
+$gray-100: #dfdfdf;
+$gray-300: #b9b9b9;
+$gray-500: #979797;
+$gray-700: #6b6b6b;
+$gray-900: #3f3f3f;
+
+$success-100: #cdead3;
+$success-300: #90dfa1;
+$success-500: #23c046;
+$success-700: #1b7c18;
+$success-900: #104a0e;
+
+$white: #fff;
+$black: #000;
