--- a/src/app/theme/styles/styles.scss
+++ b/src/app/theme/styles/styles.scss
@@ -2,4 +2,4 @@
 @import "./colors.scss";
 
 // Importa todos os estilos globais da aplicação
-@import "./global-styles.scss";
+@import "./theme.scss";
