style: Corrigi nomenclatura e ortografia

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,6 +28,6 @@
     <p>Esqueceu a senha?</p>
   </section>
   <section class="button-section">
-    <button mat-flat-button color="primary" class="btn-enter">Primary</button>
+    <button mat-flat-button color="primary" class="btn-enter">Entrar</button>
   </section>
 </section>
