Feature: Tela de nova senha

--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -9,9 +9,9 @@
     background-color: rgba(107, 159, 223, 0.081);
 }
 
-.password-reset-container {
+.new-password-container {
     position: fixed;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 40%;
@@ -52,10 +52,21 @@ a {
     margin-left: -1px;
 }
 
-::ng-deep mat-form-field {
+::ng-deep mat-form-field,
+.errors {
     width: 90%;
     margin-left: 35px;
     margin-top: 20px;
+}
+
+.ngErrors {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+img {
+    margin-right: 5px;
 }
 
 // rgb(147,113,94) - borda do input 
