fix: Corrige erros e padroniza formulário

--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -14,29 +14,27 @@
           </div>
         </div>
       </div>
+      <section class="container-form">
+        <mat-form-field appearance="outline">
+          <mat-label>E-mail</mat-label>
+          <input matInput [formControl]="email" required />
+          <mat-error *ngIf="email.invalid"> E-mail incorreto </mat-error>
+        </mat-form-field>
 
-      <mat-form-field appearance="outline" class="email-input">
-        <mat-label>E-mail</mat-label>
-        <input matInput [formControl]="email" required>
-        <mat-error *ngIf="email.invalid">
-          {{getErrorMessage()}}
-        </mat-error>
-      </mat-form-field>
+        <button mat-stroked-button class="cancel-btn" (click)="goBack()">
+          Cancelar
+        </button>
 
-      <app-button 
-        btnName="CANCELAR" 
-        class="cancel-btn" 
-        (click)="goBack()"
-      >
-      </app-button>
-
-      <app-button
-        btnName="ENVIAR" 
-        class="submit-btn" 
-        [isDisabled]="!email.valid"
-        [callbackFunction]="submit"
+        <button
+          mat-flat-button
+          color="primary"
+          [class.valid-button-color]="email.valid"
+          [disabled]="email.invalid"
+          class="send-btn"
         >
-      </app-button>
+          Enviar
+        </button>
+      </section>
     </div>
   </div>
 </body>
