--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,58 +1,60 @@
 <body>
-<div class="grey-layer">
-  <section class="container">
-    <section class="display-text">
-      <h1>Bem vindo(a)!</h1>
-      <p>Por favor, preencha os campos abaixo para logar.</p>
-    </section>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <section class="input-section">
-        <mat-form-field appearance="outline" class="email-input">
-          <mat-label>E-mail</mat-label>
-          <input type="email" matInput formControlName="email" />
-          <mat-error *ngIf="loginForm.get('email')?.hasError('email')"
-            >E-mail incorreto</mat-error
-          >
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Senha</mat-label>
-          <input
-            matInput
-            [type]="hide ? 'password' : 'text'"
-            formControlName="password"
-          />
-
-          <button
-            mat-icon-button
-            matSuffix
-            (click)="hide = !hide"
-            [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hide"
-            class="outline-btn"
-          >
-            <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
-          </button>
-          <mat-error *ngIf="loginForm.get('password')?.hasError('required')"
-            >Senha é obrigatória</mat-error
-          >
-        </mat-form-field>
-        <section class="login-section">
-          <mat-checkbox formControlName="remember">Lembrar de mim</mat-checkbox>
-          <a [routerLink]="'/auth/password-reset'">Esqueceu a senha?</a>
-        </section>
-        <section class="button-section">
-          <button
-            mat-flat-button
-            color="primary"
-            class="btn-enter"
-            type="submit"
-            [disabled]="!loginForm.valid"
-          >
-            Entrar
-          </button>
-        </section>
+  <div class="grey-layer">
+    <section class="container">
+      <section class="display-text">
+        <h1>Bem vindo(a)!</h1>
+        <p>Por favor, preencha os campos abaixo para logar.</p>
       </section>
-    </form>
-  </section>
-</div>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <section class="input-section">
+          <mat-form-field appearance="outline" class="email-input">
+            <mat-label>E-mail</mat-label>
+            <input type="email" matInput formControlName="email" />
+            <mat-error *ngIf="loginForm.get('email')?.hasError('email')"
+              >E-mail incorreto</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Senha</mat-label>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              formControlName="password"
+            />
+
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+              class="outline-btn"
+            >
+              <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+            </button>
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')"
+              >Senha é obrigatória</mat-error
+            >
+          </mat-form-field>
+          <section class="login-section">
+            <mat-checkbox formControlName="remember"
+              >Lembrar de mim</mat-checkbox
+            >
+            <a [routerLink]="'/auth/password-reset'">Esqueceu a senha?</a>
+          </section>
+          <section class="button-section">
+            <button
+              mat-flat-button
+              color="primary"
+              class="btn-enter"
+              type="submit"
+              [disabled]="!loginForm.valid"
+            >
+              Entrar
+            </button>
+          </section>
+        </section>
+      </form>
+    </section>
+  </div>
 </body>
