--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -1,71 +1,91 @@
 @import "../../theme/styles/theme.scss";
 
 .grey-layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(107, 159, 223, 0.081);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(107, 159, 223, 0.081);
 }
 
 .password-reset-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 40%;
-    height: 40%;
-    padding: 20px;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  margin: 0 auto;
 }
 
-.mat-mdc-unelevated-button.mat-primary {
-    background-color: white;
+.container-form {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 2.5rem 0 0 7rem;
 }
 
 .backward-page {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .material-icons {
-    margin-top: -30px;
-    font-size: 17px;
-    margin-right: 20px;
+  margin-top: -30px;
+  font-size: 17px;
+  margin-right: 20px;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .text-info h1 {
-    font-size: 35px;
-    margin-bottom: 8px;
-    margin-left: 0px;
+  font-size: 35px;
+  margin-bottom: 8px;
+  margin-left: 0px;
 }
 
 .text-info span {
-    font-size: 13px;
-    margin-left: -1px;
+  font-size: 13px;
+  margin-left: -1px;
 }
 
-::ng-deep mat-form-field {
-    width: 90%;
-    margin-left: 35px;
-    margin-top: 20px;
+mat-form-field {
+  width: 90%;
 }
 
-:host {
-    ::ng-deep {
-        .cancel-btn {
-            background-color: aliceblue !important;
-        }
-    }
+.cancel-btn {
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
 }
 
-// rgb(147,113,94) - borda do input 
-// rgb(58,59,63) - cor botao desabilitado
-// rgb(186,142,115) - cor botao habilitado
+.send-btn {
+  background-color: var(--foundation-primary, #979797);
+  color: #171717;
+  margin-top: 1.5rem;
+}
+
+.cancel-btn,
+.send-btn {
+  height: 3.5rem;
+  width: 28.5rem;
+  opacity: 0.3;
+  border-radius: 0.35rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.valid-button-color {
+  background-color: var(--foundation-primary, #ba8e73);
+  opacity: 1;
+  color: white;
+}
