--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -10,7 +10,8 @@ $primary-palette: (
   500: $primary-500,
   700: $primary-700,
   900: $primary-900,
-  contrast: (100: $white,
+  contrast: (
+    100: $white,
     300: $white,
     500: $white,
     700: $white,
@@ -24,7 +25,8 @@ $accent-palette: (
   500: $secondary-500,
   700: $secondary-700,
   900: $secondary-900,
-  contrast: (100: $white,
+  contrast: (
+    100: $white,
     300: $white,
     500: $white,
     700: $white,
@@ -38,7 +40,8 @@ $warn-palette: (
   500: $secondary-500,
   700: $secondary-700,
   900: $secondary-900,
-  contrast: (100: $white,
+  contrast: (
+    100: $white,
     300: $white,
     500: $white,
     700: $white,
@@ -52,7 +55,8 @@ $danger-palette: (
   500: $secondary-500,
   700: $secondary-700,
   900: $secondary-900,
-  contrast: (100: $white,
+  contrast: (
+    100: $white,
     300: $white,
     500: $white,
     700: $white,
@@ -64,11 +68,15 @@ $primary-theme: mat.define-palette($primary-palette, 500);
 $accent-theme: mat.define-palette($accent-palette, 500);
 $warn-theme: mat.define-palette($danger-palette, 500);
 
-$system-theme: mat.define-light-theme((color: (primary: $primary-theme,
-        accent: $accent-theme,
-        warn: $warn-theme,
-      ),
-    ));
+$system-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $primary-theme,
+      accent: $accent-theme,
+      warn: $warn-theme,
+    ),
+  )
+);
 
 @include mat.all-component-themes($system-theme);
 
@@ -80,7 +88,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: url(../../../assets/images/background1.png) no-repeat center center fixed;
+  background: url(../../../assets/images/background1.png) no-repeat center
+    center fixed;
   background-size: cover;
   background-color: black;
   color: white;
@@ -123,12 +132,12 @@ section {
   // button
   .mat-mdc-unelevated-button.mat-primary {
     background-color: #ba8e73;
+    opacity: 1;
     color: var(--foundation-gray-scale-white, #fff);
   }
 
   .mat-mdc-unelevated-button.mat-primary:disabled {
     background-color: #979797;
     color: #171717;
-    /* Adicione quaisquer outros estilos desejados para o botão desativado aqui */
   }
 }
