fix: Corrige erros e padroniza formulário. Resolve #9

--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -1,30 +1,31 @@
-<body>
-  <div class="grey-layer">
-    <div class="password-reset-container">
-      <div class="info-panel">
-        <div class="backward-page">
-          <span class="material-icons">
-            <a mat-button [routerLink]="'/auth/login'">arrow_back_ios</a>
+<div class="grey-layer">
+  <div class="password-reset-container">
+    <div class="info-panel">
+      <div class="backward-page">
+        <span class="material-icons">
+          <a mat-button [routerLink]="'/auth/login'">arrow_back_ios</a>
+        </span>
+        <div class="text-info">
+          <h1>Recuperar Senha</h1>
+          <span>
+            Por favor, preencha o campo abaixo para recuperar sua senha.
           </span>
-          <div class="text-info">
-            <h1>Recuperar Senha</h1>
-            <span>
-              Por favor, preencha o campo abaixo para recuperar sua senha.
-            </span>
-          </div>
         </div>
       </div>
-      <section class="container-form">
+    </div>
+    <section class="container-form">
+      <form (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline">
           <mat-label>E-mail</mat-label>
           <input matInput [formControl]="email" required />
-          <mat-error *ngIf="email.invalid"> E-mail incorreto </mat-error>
+          <mat-error *ngIf="email.hasError('required')"
+            >Você deve inserir um e-mail</mat-error
+          >
+          <mat-error *ngIf="email.hasError('email')">E-mail inválido</mat-error>
         </mat-form-field>
-
         <button mat-stroked-button class="cancel-btn" (click)="goBack()">
           Cancelar
         </button>
-
         <button
           mat-flat-button
           color="primary"
@@ -34,7 +35,7 @@
         >
           Enviar
         </button>
-      </section>
-    </div>
+      </form>
+    </section>
   </div>
-</body>
+</div>
