--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -60,18 +60,6 @@ mat-form-field {
   width: 90%;
 }
 
-.cancel-btn {
-  background-color: transparent;
-  color: #fff;
-  border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
-}
-
-.send-btn {
-  background-color: var(--foundation-primary, #979797);
-  color: #171717;
-  margin-top: 1.5rem;
-}
-
 .cancel-btn,
 .send-btn {
   height: 3.5rem;
@@ -82,6 +70,18 @@ mat-form-field {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: var(--foundation-primary);
+  color: #fff;
+  border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
+}
+
+.send-btn {
+  background-color: var(--foundation-primary, #979797);
+  color: #171717;
+  margin-top: 1.5rem;
 }
 
 .valid-button-color {
