--- a/src/app/theme/styles/theme.scss
+++ b/src/app/theme/styles/theme.scss
@@ -113,12 +113,20 @@ section {
   --mdc-checkbox-unselected-icon-color: #ffffff;
   --mdc-checkbox-unselected-focus-icon-color: #ffffff;
   --mdc-checkbox-unselected-focus-state-layer-color: #ffffff;
-  --mdc-checkbox-unselected-hover-state-layer-color: #b9b9b9;
+  --mdc-checkbox-unselected-hover-state-layer-color: #793434;
   --mdc-checkbox-unselected-pressed-state-layer-color: #ba8e73;
   --mdc-theme-text-primary-on-background: #ffffff;
   --mat-option-selected-state-label-text-color: #ba8e73;
 
-  .mat-mdc-form-field-icon-suffix {
+  // retira o asterisco do required
+  .mat-mdc-form-field-required-marker {
+    display: none;
+  }
+
+  .outline-btn {
+    border: none;
+    background: transparent;
+    color: #ffffff;
     padding: 10px;
   }
 
