Resolve alterações requisitadas no PR #10

--- a/src/app/template-email/index.html
+++ b/src/app/template-email/index.html
@@ -32,6 +32,8 @@
               <td bgcolor="#ba8e73" style="border-radius: 5px">
                 <a
                   href="URL_DA_PAGINA_DE_REDEFINICAO"
+                  rel="noopener"
+                  target="_blank"
                   style="
                     display: block;
                     padding: 15px 25px;
