Feature: Regras de negócio adicionadas

--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -1,84 +1,123 @@
-<body>
-    <div class="grey-layer">
-      <div class="new-password-container">
-        <div class="info-panel">
-          <div class="backward-page">
-            <span class="material-icons">
-              <a mat-button [routerLink]="'/auth/login'">arrow_back_ios</a>
-            </span>
-            <div class="text-info">
-              <h1>Nova senha</h1>
-              <span>
-                Informe abaixo uma nova senha para conseguir logar.
-              </span>
-            </div>
-          </div>
+<div class="grey-layer">
+  <div class="new-password-container">
+    <div class="info-panel">
+      <div class="backward-page">
+        <div class="text-info">
+          <h1>Nova senha</h1>
+          <span>
+            Informe abaixo uma nova senha para conseguir logar.
+          </span>
         </div>
-
-        <div [formGroup]="control">
-          <mat-form-field appearance="outline" class="pass-input">
-            <mat-label>Digite sua nova senha</mat-label>
-            <input type="text" matInput formControlName="password" required>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="pass-confirm-input">
-              <mat-label>Digite novamente sua nova senha</mat-label>
-              <input type="password" matInput formControlName="passConfirmation" required>
-            </mat-form-field>
-          <div class="errors">
-            <div [ngStyle]="{ 'color': control.get('password')?.errors?.['passwordSizeError'] ? 'white' : 'green' }" 
-            class="ngErrors"
-
-            >
-              <img 
-                [src]="control.get('password')?.errors?.['passwordSizeError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
-                alt="svg-checked">
-              A senha deve conter, no mínimo, 8 caracteres;
-            </div>
-
-            <div [ngStyle]="{ 'color': control.get('password')?.errors?.['upperCaseError'] ? 'white' : 'green' }" 
-            class="ngErrors"
-
-            >
-              <img 
-                [src]="control.get('password')?.errors?.['upperCaseError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
-                alt="svg-checked">
-              Deve ter pelo menos 1 letra maiúscula;
-            </div>
-
-            <div [ngStyle]="{ 'color': control.get('password')?.errors?.['numbersError'] ? 'white' : 'green' }" 
-              class="ngErrors"
-            >
-              <img 
-                [src]="control.get('password')?.errors?.['numbersError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
-                alt="svg-checked">
-              Deve ter pelo menos 1 número;
-            </div>
-
-            <div [ngStyle]="{ 'color': control.get('password')?.errors?.['specialLetterError'] ? 'white' : 'green' }"
-            class="ngErrors"
-            >
-              <img 
-                [src]="control.get('password')?.errors?.['specialLetterError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
-                alt="svg-checked"
-              >
-              Deve ter 1 caractere especial: !@#
-            </div>
-          </div>
-      </div>
-
-        <app-button 
-          btnName="CANCELAR" 
-          class="cancel-btn" 
-        >
-        </app-button>
-
-        <app-button
-            btnName="CRIAR SENHA" 
-            class="submit-btn" 
-            [callbackFunction]="goBack"
-            >
-        </app-button>
       </div>
     </div>
-  </body>
+
+    <div [formGroup]="formNewPassword">
+      <mat-form-field appearance="outline" class="pass-input">
+        <mat-label>Digite sua nova senha</mat-label>
+        <input 
+          [type]="hideFirstPass? 'password' : 'text'"
+          matInput 
+          formControlName="password"
+        >
+        <mat-icon 
+          matSuffix 
+          (click)="hideFirstPass = !hideFirstPass"
+        >
+          {{ hideFirstPass ? "visibility_off" : "visibility" }}
+        </mat-icon>
+      </mat-form-field>
+      <mat-error 
+        class="input-error" 
+        *ngIf="formNewPassword.invalid"
+      >
+        {{getErrorMessage()}}
+      </mat-error> 
+      <mat-form-field appearance="outline" class="pass-confirm-input">
+          <mat-label>Digite novamente sua nova senha</mat-label>
+          <input 
+            matInput 
+            formControlName="passConfirmation" 
+            [type]="hideSecondPass ? 'password' : 'text'"
+          >
+          <mat-icon 
+            matSuffix 
+            (click)="hideSecondPass = !hideSecondPass"
+          >
+            {{ hideSecondPass ? "visibility_off" : "visibility" }}
+          </mat-icon>
+        </mat-form-field>
+      <div class="errors" *ngIf="formNewPassword.get('password')?.value !== ''">
+        <div 
+          [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['passwordSizeError'] ? '#e38686' : '#90dfa1' }" 
+          class="ngErrors"
+        >
+          <img 
+            [src]="formNewPassword.get('password')?.errors?.['passwordSizeError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+            alt="svg-checked">
+          A senha deve conter, no mínimo, 8 caracteres;
+        </div>
+
+        <div 
+          [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['upperCaseError'] ? '#e38686' : '#90dfa1' }" 
+          class="ngErrors"
+        >
+          <img 
+            [src]="formNewPassword.get('password')?.errors?.['upperCaseError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+            alt="svg-checked">
+          Deve ter pelo menos 1 letra maiúscula;
+        </div>
+
+        <div 
+          [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['numbersError'] ? '#e38686' : '#90dfa1' }" 
+          class="ngErrors"
+        >
+          <img 
+            [src]="formNewPassword.get('password')?.errors?.['numbersError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+            alt="svg-checked">
+          Deve ter pelo menos 1 número;
+        </div>
+
+        <div 
+          [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['specialLetterError'] ? '#e38686' : '#90dfa1' }"
+          class="ngErrors"
+        >
+          <img 
+            [src]="formNewPassword.get('password')?.errors?.['specialLetterError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+            alt="svg-checked"
+          >
+          Deve ter 1 caractere especial: !@#
+        </div>
+
+        <div 
+        [ngStyle]="{ 'color': formNewPassword.invalid ? '#e38686' : '#90dfa1' }"
+        class="ngErrors"
+      >
+        <img 
+          [src]="formNewPassword.invalid ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
+          alt="svg-checked"
+        >
+        As senhas devem ser iguais em ambos os campos.
+      </div>
+      </div>
+                
+      <button 
+        mat-stroked-button 
+        class="cancel-btn"
+        (click)="goBack()"
+      >
+        CANCELAR
+      </button>
+
+      <button 
+        mat-flat-button
+        color="primary"
+        class="send-btn"
+        disabled="formNewPassword.invalid"
+        (click)="goBack()"
+        [class.valid-button-color]="formNewPassword.valid"
+      >
+        CRIAR SENHA
+      </button>
+    </div>
+  </div>
+</div>
