--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -1,4 +1,6 @@
-@import "../../theme/styles/theme.scss";
+@import '../../theme/styles/theme.scss';
+
+@import '../../theme/styles/colors.scss';
 
 .grey-layer {
     position: absolute;
@@ -20,25 +22,16 @@
     z-index: 1;
 }
 
-.mat-mdc-unelevated-button.mat-primary {
-    background-color: white;
+mat-error {
+    margin-top: -20px;
+    margin-left: 15px;
+    font-size: x-small;
 }
 
 .backward-page {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-
-.material-icons {
-    margin-top: -30px;
-    font-size: 17px;
-    margin-right: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: white;
 }
 
 .text-info h1 {
@@ -54,9 +47,14 @@ a {
 
 ::ng-deep mat-form-field,
 .errors {
-    width: 90%;
-    margin-left: 35px;
+    width: 100%;
     margin-top: 20px;
+}
+
+
+.hidePass-btn {
+    background-color: var(--foundation-primary);
+
 }
 
 .ngErrors {
@@ -68,6 +66,41 @@ a {
 img {
     margin-right: 5px;
 }
+
+.cancel-btn,
+.send-btn {
+    height: 3.5rem;
+    width: 100%;
+    margin-top: 20px;
+    opacity: 0.3;
+    border-radius: 0.35rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.cancel-btn,
+.hide-icon {
+    background-color: var(--foundation-primary);
+    color: $white;
+    border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
+}
+
+.send-btn {
+    background-color: $gray-500;
+    color: #171717;
+    margin-top: 1.5rem;
+    cursor: default
+}
+
+.valid-button-color {
+    background-color: $primary-500;
+    opacity: 1;
+    color: $white;
+    cursor: pointer;
+}
+
 
 // rgb(147,113,94) - borda do input 
 // rgb(58,59,63) - cor botao desabilitado
