style: corrige estilização na tela de login e recuracao de senha

--- a/src/app/auth/password-reset/password-reset.component.scss
+++ b/src/app/auth/password-reset/password-reset.component.scss
@@ -75,6 +75,7 @@ mat-form-field {
 .cancel-btn {
   background-color: var(--foundation-primary);
   color: #fff;
+  opacity: 1;
   border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
 }
 
