criado metodo para enviar email e modal de sucesso

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,7 @@
           <mat-checkbox formControlName="isRememberEnabled"
             >Lembrar de mim</mat-checkbox
           >
-          <a [routerLink]="'/auth/password-reset'">Esqueceu a senha?</a>
+          <a (click)="forgotPassword()" (keydown)="forgotPassword()" tabindex="0">Esqueceu a senha?</a>
         </section>
         <section class="button-section">
           <button
