--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -14,14 +14,14 @@
       </div>
     </div>
     <section class="container-form">
-      <form (ngSubmit)="onSubmit()">
+      <form (ngSubmit)="onSubmit()" [formGroup]="emailForm">
         <mat-form-field appearance="outline">
           <mat-label>E-mail</mat-label>
-          <input matInput [formControl]="email" required />
-          <mat-error *ngIf="email.hasError('required')"
-            >Você deve inserir um e-mail</mat-error
+          <input matInput formControlName="email" [value]="email" required />
+          <mat-error *ngIf="emailForm.get('email')?.hasError('required')"
+          >Você deve inserir um e-mail</mat-error
           >
-          <mat-error *ngIf="email.hasError('email')">E-mail inválido</mat-error>
+          <mat-error *ngIf="emailForm.get('email')?.hasError('email')">E-mail inválido</mat-error>
         </mat-form-field>
         <button mat-stroked-button class="cancel-btn" (click)="goBack()">
           Cancelar
@@ -29,8 +29,8 @@
         <button
           mat-flat-button
           color="primary"
-          [class.valid-button-color]="email.valid"
-          [disabled]="email.invalid"
+          [class.valid-button-color]="emailForm.valid"
+          [disabled]="emailForm.invalid"
           class="send-btn"
         >
           Enviar
