--- a/src/app/theme/components/dialog/dialog.component.html
+++ b/src/app/theme/components/dialog/dialog.component.html
@@ -1,15 +1,16 @@
-<div class="container slide-in">
-    <div class="custom-dialog-container">
+<mat-dialog-content class="container-dialog">
+        
         <div class="image-container">
+            <div></div>
             <img class="check-success" src="../../../../assets/images/check_circle.png" alt="">
-            <img class="icon-close" src="../../../../assets/images/icon-close.png" alt="">
+            <img class="icon-close" src="../../../../assets/images/icon-close.png" alt="" (click)="cancel()" (keyup)="cancel()" tabindex="0">
+
         </div>
         <h1 mat-dialog-title>Sucesso!</h1>
-        <div mat-dialog-content>
-            <p>{{ data.response }}</p>
-        </div>
+        <mat-dialog-content>
+            <p>{{ data.message }}</p>
+        </mat-dialog-content>
         <div mat-dialog-actions>
-            <button mat-button class="custom-button" (click)="cancel()">Finalizar</button>
+            <button mat-stroked-button color="primary" (click)="cancel()">Finalizar</button>
         </div>
-    </div>
-</div>
+</mat-dialog-content>
