Fix: Tipagens, Themas, Funcoes Incompletas

--- a/src/app/auth/new-password/new-password.component.html
+++ b/src/app/auth/new-password/new-password.component.html
@@ -15,22 +15,15 @@
       <mat-form-field appearance="outline" class="pass-input">
         <mat-label>Digite sua nova senha</mat-label>
         <input 
-          [type]="hideFirstPass? 'password' : 'text'"
           matInput 
           formControlName="password"
         >
-        <mat-icon 
-          matSuffix 
-          (click)="hideFirstPass = !hideFirstPass"
-        >
-          {{ hideFirstPass ? "visibility_off" : "visibility" }}
-        </mat-icon>
       </mat-form-field>
       <mat-error 
         class="input-error" 
-        *ngIf="formNewPassword.invalid"
+        *ngIf="formNewPassword.get('password')?.invalid && formNewPassword.get('password')?.dirty"
       >
-        {{getErrorMessage()}}
+        Preenchido de forma incorreta, tente novamente!
       </mat-error> 
       <mat-form-field appearance="outline" class="pass-confirm-input">
           <mat-label>Digite novamente sua nova senha</mat-label>
@@ -46,7 +39,7 @@
             {{ hideSecondPass ? "visibility_off" : "visibility" }}
           </mat-icon>
         </mat-form-field>
-      <div class="errors" *ngIf="formNewPassword.get('password')?.value !== ''">
+      <div class="errors" *ngIf="formNewPassword?.get('password')?.touched || formNewPassword?.get('password')?.dirty">
         <div 
           [ngStyle]="{ 'color': formNewPassword.get('password')?.errors?.['passwordSizeError'] ? '#e38686' : '#90dfa1' }" 
           class="ngErrors"
@@ -85,23 +78,13 @@
             [src]="formNewPassword.get('password')?.errors?.['specialLetterError'] ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
             alt="svg-checked"
           >
-          Deve ter 1 caractere especial: !@#
+          Deve ter pelo menos 1 caractere especial: !@#
         </div>
-
-        <div 
-        [ngStyle]="{ 'color': formNewPassword.invalid ? '#e38686' : '#90dfa1' }"
-        class="ngErrors"
-      >
-        <img 
-          [src]="formNewPassword.invalid ? '../../../assets/images/whiteChecked.svg' : '../../../assets/images/greenChecked.svg'"
-          alt="svg-checked"
-        >
-        As senhas devem ser iguais em ambos os campos.
-      </div>
       </div>
                 
       <button 
-        mat-stroked-button 
+        mat-flat-button
+        color="primary"
         class="cancel-btn"
         (click)="goBack()"
       >
@@ -112,9 +95,9 @@
         mat-flat-button
         color="primary"
         class="send-btn"
-        disabled="formNewPassword.invalid"
-        (click)="goBack()"
-        [class.valid-button-color]="formNewPassword.valid"
+        [disabled]="formNewPassword.invalid"
+        (click)="newPassBtnRequest()"
+        [class.valid-button-color]="formNewPassword.valid" 
       >
         CRIAR SENHA
       </button>
