--- a/src/app/auth/new-password/new-password.component.scss
+++ b/src/app/auth/new-password/new-password.component.scss
@@ -72,7 +72,6 @@ img {
     height: 3.5rem;
     width: 100%;
     margin-top: 20px;
-    opacity: 0.3;
     border-radius: 0.35rem;
     font-size: 0.8rem;
     font-weight: 700;
@@ -80,18 +79,19 @@ img {
     cursor: pointer;
 }
 
-.cancel-btn,
-.hide-icon {
+.cancel-btn {
     background-color: var(--foundation-primary);
-    color: $white;
+    color: rgb(255, 255, 255);
+    opacity: 0.9;
     border: 1px solid var(--foundation-gray-scale-gray-900, #47474e);
 }
 
 .send-btn {
     background-color: $gray-500;
-    color: #171717;
+    color: #121417;
     margin-top: 1.5rem;
-    cursor: default
+    opacity: 0.3;
+    cursor: default;
 }
 
 .valid-button-color {
@@ -99,6 +99,10 @@ img {
     opacity: 1;
     color: $white;
     cursor: pointer;
+}
+
+.valid-button-color:hover {
+    background-color: $primary-300;
 }
 
 
