--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <section class="container-form">
-      <form (ngSubmit)="onSubmit()" [formGroup]="emailForm">
+      <form [formGroup]="emailForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline">
           <mat-label>E-mail</mat-label>
           <input matInput formControlName="email" [value]="email" required />
