--- a/src/app/theme/components/dialog/dialog.component.html
+++ b/src/app/theme/components/dialog/dialog.component.html
@@ -1,16 +1,27 @@
 <mat-dialog-content class="container-dialog">
-        
-        <div class="image-container">
-            <div></div>
-            <img class="check-success" src="../../../../assets/images/check_circle.png" alt="">
-            <img class="icon-close" src="../../../../assets/images/icon-close.png" alt="" (click)="cancel()" (keyup)="cancel()" tabindex="0">
-
-        </div>
-        <h1 mat-dialog-title>Sucesso!</h1>
-        <mat-dialog-content>
-            <p>{{ data.message }}</p>
-        </mat-dialog-content>
-        <div mat-dialog-actions>
-            <button mat-stroked-button color="primary" (click)="cancel()">Finalizar</button>
-        </div>
+  <div class="image-container">
+    <div></div>
+    <img
+      class="check-success"
+      src="../../../../assets/images/check_circle.png"
+      alt=""
+    />
+    <img
+      class="icon-close"
+      src="../../../../assets/images/icon-close.png"
+      alt=""
+      (click)="cancel()"
+      (keyup)="cancel()"
+      tabindex="0"
+    />
+  </div>
+  <h1 mat-dialog-title>Sucesso!</h1>
+  <mat-dialog-content>
+    <p>{{ data.data }}</p>
+  </mat-dialog-content>
+  <div mat-dialog-actions>
+    <button mat-stroked-button color="primary" (click)="cancel()">
+      Finalizar
+    </button>
+  </div>
 </mat-dialog-content>
