component para titulo principal criado

--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -1,1 +1,5 @@
+<app-page-title
+  [title]="'Meteorologia em Marte'"
+  [subtitle]="'Veja abaixo as temperaturas registradas até o momento.'"
+></app-page-title>
 <app-logout></app-logout>
