--- a/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
+++ b/src/app/pages/mars-weather-panel/mars-weather-panel.component.html
@@ -3,4 +3,4 @@
   [subtitle]="'Veja abaixo as temperaturas registradas até o momento.'"
 ></app-page-title>
 <app-logout></app-logout>
-<app-carousel></app-carousel>
+<app-carousel [weatherCards]="weatherCards"></app-carousel>
