--- a/src/app/theme/components/carousel/carousel.component.html
+++ b/src/app/theme/components/carousel/carousel.component.html
@@ -5,8 +5,12 @@
       <p class="sol">SOL {{ weatherCard.solDate }}</p>
       <p class="date">{{ weatherCard.terrestrialDate | date }}</p>
       <img src="../../../../assets/images/rectangle.png" alt="" />
-      <p class="max-temp">Máx.: {{ weatherCard.temperature.fahrenheit.max }}° F</p>
-      <p class="min-temp">Mín.: {{ weatherCard.temperature.fahrenheit.min }}° F</p>
+      <p class="max-temp">
+        Máx.: {{ weatherCard.temperature.fahrenheit.max.value }}° F
+      </p>
+      <p class="min-temp">
+        Mín.: {{ weatherCard.temperature.fahrenheit.min.value }}° F
+      </p>
     </ng-template>
   </swiper>
   <img class="arrow-right" src="../../../../assets/images/arrow.png" alt="" />
